update dracut.conf .config

--- a/etc/dracut.conf.d/default.conf
+++ b/etc/dracut.conf.d/default.conf
@@ -3,5 +3,5 @@ hostonly="yes"
 force="yes"
 compress="xz"
 # Equivalent to -o "module"
-omit_dracutmodules+="bootchart dash modsign busybox network lvmmerge btrfs dm dmraid dmsquash-live-ntfs lvm mdraid crypt-gpg cifs iscsi iscsi biosdevname masterkey"
+omit_dracutmodules+="bootchart dash modsign busybox network lvmmerge btrfs dm dmraid dmsquash-live-ntfs lvm mdraid crypt-gpg cifs iscsi iscsi biosdevname masterkey i18n rootfs-block terminfo kernel-modules fs-lib usrmount crypt nfs"
 no_kernel="yes"
